# OBS-Realtime-Subtitles

./: CMakeLists.txt  LICENSE  enum-tcspeech.cpp  enum-tcspeech.hpp  hci_asr.h  hci_asr_recorder.h  hci_sys.h  plugin-main.cpp  readme.md  speechfilter.cpp  tcspeech.cpp
common/: AccountInfo.cpp  AccountInfo.h  CommonTool.cpp  CommonTool.h  FileReader.cpp  FileReader.h
data/locale/: en-US.ini  zh-CN.ini
